--- a/config.toml
+++ b/config.toml
@@ -23,7 +23,7 @@ showQr = true
 showSkills = true
 
 [[params.handles]]
-link = "https://www.linkedin.com/in/pierre-béguin/"
+link = "https://www.linkedin.com/in/pierrebeguin/"
 name = "LinkedIn"
 
 [[params.handles]]
